@@ -38,24 +38,13 @@ subprojects {
         testImplementation platform('org.junit:junit-bom:6.0.0')
         testImplementation 'org.junit.jupiter:junit-jupiter'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    }
-
-    tasks.withType(JavaCompile).configureEach {
-        options.compilerArgs += [
-            '--enable-preview'
-        ]
+        testImplementation 'org.joml:joml:1.10.8'
     }
 
     tasks.withType(Test).configureEach {
-        jvmArgs += [
-            '--enable-preview'
-        ]
+        testLogging {
+            showStandardStreams = true
+        }
         useJUnitPlatform()
-    }
-
-    tasks.withType(JavaExec).configureEach {
-        jvmArgs += [
-            '--enable-preview'
-        ]
     }
 }
